<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="telegramXMainScreen1RowModel" type="com.rahulsapplication.app.modules.telegramxmainscreen.data.model.TelegramXMainScreen1RowModel"/>
    </data>
    <LinearLayout android:gravity="end" android:id="@+id/linearGroup"
        android:layout_height="wrap_content"
        android:layout_width="match_parent" android:orientation="vertical">
        <LinearLayout android:id="@+id/linearGroup53"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_9pxv"
            android:layout_width="match_parent" android:orientation="horizontal">
            <LinearLayout android:id="@+id/linearGroup43"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10pxh"
                android:layout_weight="0.81" android:layout_width="0dp" android:orientation="horizontal">
                <ImageView android:id="@+id/imageAvatar"
                    android:layout_height="@dimen/_57pxh"
                    android:layout_marginBottom="@dimen/_3pxv"
                    android:layout_marginTop="@dimen/_2pxv"
                    android:layout_width="@dimen/_57pxh"
                    android:scaleType="fitXY" circular="@{true}"
                    imageRes="@{@drawable/img_avatar_6}" tools:src="@drawable/img_avatar_6"/>
                <LinearLayout android:gravity="start"
                    android:id="@+id/linearLayout"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_1pxv"
                    android:layout_marginEnd="@dimen/_13pxh"
                    android:layout_marginStart="@dimen/_12pxh"
                    android:layout_weight="0.75"
                    android:layout_width="0dp" android:orientation="vertical">
                    <LinearLayout android:id="@+id/linearTitleLayout"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent" android:orientation="horizontal">
                        <TextView android:ellipsize="end"
                            android:id="@+id/txtRobertLeeZeme"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.89"
                            android:layout_width="0dp"
                            android:singleLine="true"
                            android:text="@{telegramXMainScreen1RowModel.txtRobertLeeZeme}"
                            style="@style/txtRobotomedium16" tools:text="@string/msg_robert_lee_zeme"/>
                        <ImageView android:id="@+id/imageFilledMuteI"
                            android:layout_height="@dimen/_18pxh"
                            android:layout_marginStart="@dimen/_4pxh"
                            android:layout_width="@dimen/_18pxh"
                            android:scaleType="fitXY" android:src="@drawable/img_filledmutei"/>
                    </LinearLayout>
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtDirector"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_10pxh"
                        android:layout_marginTop="@dimen/_4pxv"
                        android:layout_width="wrap_content"
                        android:singleLine="true"
                        android:text="@{telegramXMainScreen1RowModel.txtDirector}"
                        style="@style/txtRobotomedium14_2" tools:text="@string/lbl_director"/>
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtMaybe"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_10pxh"
                        android:layout_marginTop="@dimen/_4pxv"
                        android:layout_width="wrap_content"
                        android:singleLine="true"
                        android:text="@{telegramXMainScreen1RowModel.txtMaybe}"
                        style="@style/txtRobotoregular15" tools:text="@string/lbl_maybe"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout android:gravity="end"
                android:id="@+id/linearGroup52"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_6pxv"
                android:layout_marginEnd="@dimen/_13pxh"
                android:layout_marginStart="@dimen/_19pxh"
                android:layout_marginTop="@dimen/_1pxv"
                android:layout_weight="0.19" android:layout_width="0dp" android:orientation="vertical">
                <LinearLayout android:id="@+id/linearService"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent" android:orientation="horizontal">
                    <ImageView android:id="@+id/imageLineReadIco"
                        android:layout_height="@dimen/_18pxh"
                        android:layout_width="@dimen/_18pxh"
                        android:scaleType="fitXY" android:src="@drawable/img_linereadico"/>
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtMay02"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_1pxv"
                        android:layout_marginStart="@dimen/_1pxh"
                        android:layout_marginTop="@dimen/_1pxv"
                        android:layout_weight="0.7"
                        android:layout_width="0dp"
                        android:singleLine="true"
                        android:text="@{telegramXMainScreen1RowModel.txtMay02}"
                        style="@style/txtRobotoregular13" tools:text="@string/lbl_may_02"/>
                </LinearLayout>
                <androidx.appcompat.widget.AppCompatButton
                    android:ellipsize="end" android:gravity="center"
                    android:id="@+id/btn2"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10pxh"
                    android:layout_marginTop="@dimen/_13pxv"
                    android:layout_width="match_parent"
                    android:paddingBottom="@dimen/_4pxv"
                    android:paddingEnd="@dimen/_8pxh"
                    android:paddingStart="@dimen/_8pxh"
                    android:paddingTop="@dimen/_4pxv"
                    android:singleLine="true"
                    android:text="@string/lbl_2"
                    android:textAllCaps="false"
                    style="@style/btnSolidRounded_1" tools:text="@string/lbl_2"/>
            </LinearLayout>
        </LinearLayout>
        <View android:background="@color/bluegray_100"
            android:id="@+id/lineDivider"
            android:layout_height="@dimen/_1pxv"
            android:layout_marginStart="@dimen/_10pxh"
            android:layout_marginTop="@dimen/_9pxv" android:layout_width="@dimen/_287pxh"/>
    </LinearLayout>
</layout>
